# voice-auth-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.claude/commands/: branch-checkout.md  command-create.md  commit-message.md  pr-create.md  pr-merge.md
.github/workflows/: build-pyopenjtalk.yml  ci.yml  release.yml
scripts/: download_models.py  generate_digit_voice.py
src/voice_auth_engine/: __init__.py  audio_preprocessor.py  audio_validator.py  cli.py  embedding_extractor.py  math.py  model_config.py  model_downloader.py  passphrase_auth.py  passphrase_validator.py  phoneme_extractor.py  phoneme_validator.py  speaker_verifier.py  speech_detector.py  speech_recognizer.py  vad.py  voice_auth.py
tests/: audio_factory.py  conftest.py  test_audio_preprocessor.py  test_audio_validator.py  test_cli.py  test_embedding_extractor.py  test_math.py  test_model_config.py  test_model_downloader.py  test_passphrase_auth.py  test_passphrase_auth_integration.py  test_passphrase_validator.py  test_passphrase_verifier.py  test_phoneme_extractor.py  test_phoneme_validator.py  test_sample.py  test_speaker_verifier.py  test_speech_detector.py  test_speech_detector_integration.py  test_speech_recognizer.py  test_vad.py  test_vad_integration.py  test_voice_auth.py  test_voice_auth_integration.py
