[project]
name = "voice-auth-engine"
version = "0.1.0"
description = "Voice authentication engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sherpa-onnx",
    "sherpa-onnx-core",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=voice_auth_engine --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
