[project]
name = "voice-auth-engine"
version = "0.4.0"
description = "Voice authentication engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av",
    "numpy",
    "platformdirs",
    "pyopenjtalk",
    "sherpa-onnx",
    "sherpa-onnx-core",
    "tqdm>=4.67.3",
]

[project.scripts]
voice-auth-engine = "voice_auth_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=voice_auth_engine --cov-report=term-missing"
filterwarnings = [
    "ignore:Python 3.14 will.*filter extracted tar archives:DeprecationWarning",
]

[tool.uv.sources]
pyopenjtalk = [
    { url = "https://github.com/muzin00/voice-auth-engine/releases/download/v0.3.0/pyopenjtalk-0.4.1-cp313-cp313-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { url = "https://github.com/muzin00/voice-auth-engine/releases/download/v0.3.0/pyopenjtalk-0.4.1-cp313-cp313-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
